--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <title>TodoList</title>
+    <link
+      rel="shortcut icon"
+      href="https://api.iconify.design/simple-icons:todoist.svg"
+    />
   </head>
   <body>
     <div id="root"></div>
